Pimping top level files 	modified:   _objectives_ifeby310.qmd 	modified:   _quarto.yml 	new file:   computing-access.qmd 	new file:   computing-docker.qmd 	new file:   computing-pipelines.qmd 	new file:   computing-psql.qmd 	modified:   cours-syllabus.qmd 	new file:   course-team.qmd 	modified:   index.qmd 	modified:   notebooks-listings.qmd 	modified:   notebooks-listings.yaml 	new file:   quarto-format.qmd

--- a/_objectives_ifeby310.qmd
+++ b/_objectives_ifeby310.qmd
@@ -1,6 +1,6 @@
-Après avoir suivi ce cours, vous serez capable :
+During this course, you shall learn to:
 
-- d'interroger une base de données relationnelle
-- de lire un schéma  de base de données 
-- de concevoir une base de données
-- d'améliorer une base de données 
+- Handle middlesize data using Python Data Stack: Numpy/Scipy/Pandas
+- Scale up and down with Dask
+- Handle Big Data with Spark (PySpark) 
+- Manage and store data using dedicated columnar formats (Parquet, ORC, Avro, Arrow)
